[metadata]
name = cryovacTIC500
version = 0.1
license = MIT
description = Tango device server for the cryovac TIC500 temperature controller
long_description = file: README.md
author = MBI-Div-B
classifiers=
   Development Status :: 4 - Beta
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pytango>=9.5
[options.packages.find]
where=src
[options.entry_points]
    console_scripts =
        CryovacTIC500 = cryovacTIC500:main